css/styles.css
/* Variables */
:root {
  --color-blue-900: hsl(233, 54%, 16%);
  --color-blue-600: hsl(234, 25%, 52%);
  --color-pink-600: hsl(341, 92%, 62%);
  --color-pink-300: hsl(341, 100%, 83%);
  --color-grey: hsl(232, 10%, 56%);
  --color-white: hsl(0, 0%, 100%);
  --gradient-pink: linear-gradient(hsl(13, 100%, 64%), hsl(322, 87%, 55%));
  --gradient-purple: linear-gradient(hsl(237, 100%, 64%), hsl(322, 87%, 55%));
}

/* Base Styles */
*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

img {
  width: 100%;
  height: auto;
}

/* Typography */
body {
  font-size: 1rem;
  font-size: clamp(1rem, 0.9353448275862069rem + 0.27586206896551724vw, 1.125rem);
  font-family: "Plus Jakarta Sans", Arial, Helvetica, sans-serif;
}

h1, h2 {
  line-height: 1.2;
  font-weight: 800;
}

h1 {
  font-size: clamp(2.5rem, 1.9827586206896552rem + 2.206896551724138vw, 3.5rem);
  color: var(--color-blue-900);
}

h2 {
  font-size: clamp(1.25rem, 1.1206896551724137rem + 0.5517241379310345vw, 1.5rem);
  color: var(--color-blue-900);
}

p {
  line-height: 1.5;
}

/* Buttons */
.btn {
  border: 0;
  text-decoration: none;
  padding: 0.8rem 1.5rem;
  font-size: 1.125rem;
  display: inline-block;
  cursor: pointer;
  font-family: inherit;
  border-radius: 2rem;
  text-align: center;
  font-weight: 700;
}

.btn--primary {
  background: var(--color-blue-900);
  color: var(--color-white);
}

.btn--secondary {
  background: var(--gradient-pink);
  color: var(--color-white);
}

.btn--accent {
  background: var(--gradient-purple);
  color: var(--color-white);
}

/* Cards */
.card {
  background: var(--color-white);
  padding-block-start: 2.8rem;
  padding-block-end: 2.1rem;
  padding-inline: 1.4rem;
  border-radius: 9px;
  position: relative;
  max-width: 340px;
}

.card__icon {
  position: absolute;
  width: 56px;
  height: 56px;
  top: 0;
  transform: translateY(-28px);
}

.card__header {
  margin-bottom: 1rem;
}

.card__description {
  color: var(--color-grey);
  margin-bottom: 1.2rem;
}

.card__link {
  text-decoration: none;
  color: var(--color-pink-600);
  font-weight: 800;
}

/* CTA */
.cta {
  background: var(--gradient-pink);
  padding-block: 2rem;
  border-radius: 9px;
  padding-inline: 2rem;
  max-width: 340px;
}

.cta__content {
  color: var(--color-white);
  font-weight: 800;
  font-size: 1.5rem;
  line-height: 1.4;
}

/* Header Section */
.header {
  padding-block: 1rem;
}

.header__wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header__logo {
  width: 79px;
  height: 21px;
}

/* Hero Section */
.hero {
  padding-block-start: 1.4rem;
}

.hero__title {
  margin-bottom: 1.5rem;
}

.hero__description {
  color: var(--color-grey);
  margin-bottom: 1.2rem;
}

.hero__image {
  width: 100%;
}

@media screen and (min-width: 800px) {
  .hero {
    overflow: hidden;
    padding-block: 0;
  }

  .hero__wrapper {
    display: grid;
    grid-template-columns: 50% 50%;
  }

  .hero__image-container, .hero__content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
  }

  .hero__image {
    width: 700px;
  }
}

/* Features Section */
.features-section {
  background: linear-gradient(white, rgb(239, 241, 254));
  padding-block-end: 4.5rem;;
}

.features-section__wrapper {
  display: grid;
  gap: 2.7rem;
  justify-items: center;
}

.features-section__cta {
  width: 100%;
}

@media screen and (min-width: 500px) {
  .features-section__wrapper {
    grid-template-columns: 1fr 1fr;
    gap: 2.7rem 1rem;
  }
}

@media screen and (min-width: 900px) {
  .features-section__wrapper {
    grid-template-columns: repeat(3, 1fr);
  }
}

/* Footer Section */
.footer {
  background: var(--color-blue-900);
}

.footer__wrapper {
  display: flex;
  padding-block: 2rem;
  align-items: center;
  justify-content: space-between;

}

.footer__wrapper img {
  width: 79px;
  height: 21px;
}

/* Utilities */
.wrapper {
  width: min(100% - 2rem, 62.5rem);
  margin-inline: auto;
}

.box {
  width: 100px;
  height: 100px;
  background: green;
}

